# result

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/meanbot/: result.hpp  result_fmt.hpp  result_require.hpp  result_version.hpp
src/: precomp.cpp  precomp.hpp
tests/result_fuzz_tests/: CMakeLists.txt  result_fuzz_tests.cpp
tests/result_perf_tests/: CMakeLists.txt  result_perf_tests.cpp
tests/result_tests/: CMakeLists.txt  result_tests.cpp
tests/result_unit_tests/: CMakeLists.txt  result_unit_tests.cpp
